# ef-desktop

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
crates/ef-core/: Cargo.toml
crates/ef-core/src/: auth.rs  ble.rs  cloud.rs  command.rs  crc.rs  crypto.rs  encpacket.rs  keydata.rs  lib.rs  manager.rs  model.rs  packet.rs  profile.rs  river.rs  secp160r1.rs  session.rs
doc/ef-ble-protocol/: README.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  store.rs
src/lib/: ipc.ts  knownDevices.ts  stores.ts  theme.ts
src/lib/components/: ControlsPanel.svelte  DeviceDetail.svelte  DeviceRail.svelte  DeviceRow.svelte  LabelDialog.svelte  SettingsView.svelte  TelemetryGrid.svelte
src/routes/: +layout.svelte  +page.svelte
