[package]
name = "ef-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Reverse-engineered BLE protocol for EcoFlow power stations: transport, handshake, telemetry decoding, device runtime."

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
btleplug = "0.11"
futures = "0.3"
anyhow = "1"
thiserror = "1"
md-5 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
hex = "0.4"
uuid = "1"
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
